--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: moneymanager
 version: 1.0.0+1
 description: MoneyManager app using Material 3 expressive UI
-publish_to: "none"
+publish_to: 'none'
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -19,11 +19,45 @@ dependencies:
   intl: ^0.19.0
   dynamic_color: ^1.7.0
   share_plus: ^7.2.1
+  local_auth: ^2.1.8
+  sqflite: ^2.3.2
+  path_provider: ^2.1.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  # Material 3 Expressive Icon Configuration
+  android: 'launcher_icon'
+  ios: false
+  image_path: 'assets/icons/app_logo.png'
+  min_sdk_android: 21
+
+  # Android Adaptive Icons (Material 3 Support)
+  adaptive_icon_background: '#4CAF50' # Material 3 Primary Green
+  adaptive_icon_foreground: 'assets/icons/app_logo.png'
+
+  # Web App Manifest (Material 3 Colors)
+  web:
+    generate: true
+    image_path: 'assets/icons/app_logo.png'
+    background_color: '#4CAF50' # Material 3 Primary
+    theme_color: '#2E7D32' # Material 3 Primary Dark
+
+  # Windows (Material 3 Design)
+  windows:
+    generate: true
+    image_path: 'assets/icons/app_logo.png'
+    icon_size: 48
+
+  # macOS (Material 3 Adaptive)
+  macos:
+    generate: true
+    image_path: 'assets/icons/app_logo.png'
 
 flutter:
   uses-material-design: true
