--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: moneymanager
-version: 1.0.0+1
+version: 2.1.0+1
 description: MoneyManager app using Material 3 expressive UI
 publish_to: 'none'
 
@@ -23,6 +23,9 @@ dependencies:
   sqflite: ^2.3.2
   path_provider: ^2.1.2
   shared_preferences: ^2.2.2
+  file_picker: ^10.3.6
+  csv: ^6.0.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
