--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   file_picker: ^10.3.6
   csv: ^6.0.0
   url_launcher: ^6.3.2
+  uuid: ^4.5.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
